# satipatthana-framework

./: .gitignore  README.md  main.py  pyproject.toml
data/: test.py
docs/: config_summary.md  data_format.md  logging.md  model.md  model_en.md  prompt.md  specification.md  specification_en.md  theory.md  theory_en.md  training_strategy.md  workflow_guide.md
docs/diagrams/: v4_class_diagram.pu  v4_sequence_diagram_inference.pu  v4_sequence_diagram_noise_generation.pu  v4_sequence_diagram_training_overview.pu  v4_sequence_diagram_training_stage0.pu  v4_sequence_diagram_training_stage1.pu  v4_sequence_diagram_training_stage2.pu  v4_sequence_diagram_training_stage3.pu
docs/issues/: trainer_loss_injection.md
docs/manual/: v4_notebook.md
docs/refactoring/: refactoring_config.md  refactoring_module.md  v4_sequence_diagram_inference.pu  v4_sequence_diagram_noise_generation.pu  v4_sequence_diagram_training_stage0.pu  v4_sequence_diagram_training_stage2.pu  v4_specification_and_migration.md
notebooks/: 01_mnist_visual_convergence.ipynb  02_trust_score_explained.ipynb  03_fraud_detection_tutorial.ipynb  fraud_detection.ipynb  fraud_unsupervised_detection_explained.ipynb  mnist.ipynb  mnist_demo.ipynb  time_series_anomaly_detection.ipynb
samadhi/components/: README.md
samadhi/configs/: README.md  adapters.py  augmenter.py  base.py  decoders.py  enums.py  factory.py  main.py  objectives.py  sati.py  system.py  vicara.py  vipassana.py  vitakka.py
samadhi/core/: builder.py  engine.py  engines.py  santana.py  system.py
satipatthana/: __init__.py
tests/: conftest.py
(+238 files in other folders)
